--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,46 @@
-buildscript {
-  repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
-  }
-  dependencies {
-    classpath "com.gradle.publish:plugin-publish-plugin:0.9.4"
-  }
+plugins {
+  id "com.gradle.plugin-publish" version "0.9.4"
+  id "java-gradle-plugin"
+  id "eclipse"
 }
-
-apply plugin: "com.gradle.plugin-publish"
-apply plugin: 'java'
-apply plugin: 'eclipse'
 
 repositories {
-    jcenter()
+  jcenter()
 }
 
-version = "1.0"
+version = "1.1"
 group = "gov.loc.repository"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.18',
-    'org.apache.httpcomponents:httpclient:4.5.1',
-    'org.apache.httpcomponents:httpmime:4.5.1',
-    'com.google.code.gson:gson:2.5',
-    gradleApi()
+  compile 'org.slf4j:slf4j-api:1.7.18',
+  'org.apache.httpcomponents:httpclient:4.5.1',
+  'org.apache.httpcomponents:httpmime:4.5.1',
+  'com.google.code.gson:gson:2.5',
+  gradleApi()
 
-    testCompile 'junit:junit:4.12', 
-    'org.mockito:mockito-core:1.10.19',
-    gradleTestKit()
+  testCompile 'junit:junit:4.12', 
+  'org.mockito:mockito-core:1.10.19'
 }
 
 pluginBundle {
   website = 'https://github.com/libraryofcongress'
   vcsUrl = 'https://github.com/libraryofcongress/artifactory-plugin'
-  description = 'Upload artifacts to artifactory using rest api'
+  description = 'Upload artifacts to artifactory using its rest api instead of the provided plugin. '
   tags = ['artifactory', 'upload', 'rest-api']
 
   plugins {
-    greetingsPlugin {
+    artifactory {
       id = 'gov.loc.repository.artifactory'
       displayName = 'Simple Artifactory plugin'
     }
   }
+}
+
+project.dependencies {
+  compile 'org.apache.httpcomponents:httpclient:4.5.1',
+  'org.apache.httpcomponents:httpmime:4.5.1',
+  'com.google.code.gson:gson:2.5'
 }
