--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ jacocoTestReport {
   }
 }
 
+jacocoTestReport.dependsOn test
+check.dependsOn jacocoTestReport
+
 //Keep this for easy viewing of html findbugs report
 //tasks.withType(FindBugs) {
 //  reports {
