--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
   jcenter()
 }
 
-version = "1.1"
+version = "1.0"
 group = "gov.loc.repository"
 
 sourceCompatibility = 1.8
@@ -29,7 +29,7 @@ dependencies {
 }
 
 pluginBundle {
-  website = 'https://github.com/libraryofcongress'
+  website = 'https://github.com/libraryofcongress/simple-artifact-uploader'
   vcsUrl = 'https://github.com/libraryofcongress/simple-artifact-uploader'
   description = 'Upload artifacts to artifactory using its rest api instead of the provided plugin. '
   tags = ['artifactory', 'upload', 'rest-api']
