--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id "com.gradle.plugin-publish" version "0.9.4"
+  id "com.github.kt3k.coveralls" version "2.6.3"
   id "java-gradle-plugin"
   id "eclipse"
   id "jacoco"
