install automatically in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ jdk:
   - oraclejdk8
 language: java
 before_script: #ensure that it uses the latest version of gradle
-  - sudo add-apt-repository ppa:cwchien/gradle
-  - sudo apt-get update
-  - sudo apt-get install gradle-ppa
+  - sudo add-apt-repository -y ppa:cwchien/gradle
+  - sudo apt-get -y update
+  - sudo apt-get -y install gradle-ppa
 install: /bin/true #skip having travis-ci trying to run assemble
 script: 
   - "gradle --version"
