--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,25 @@ findbugs {
 pmdTest.enabled = false
 
 pmd {
-  ruleSets = ["java-basic", "java-braces", "java-empty"]
+  ruleSets = [
+    "java-basic", 
+    "java-braces",
+    "java-clone",
+    "java-codesize",
+    "java-design",
+    "java-empty",
+    "java-finalizers",
+    "java-imports",
+    "java-j2ee",
+    "java-javabeans",
+    "java-optimizations",
+    "java-strictexception",
+    "java-strings",
+    "java-sunsecure",
+    "java-typeresolution",
+    "java-unnecessary",
+    "java-unusedcode"
+  ]
 }
 
 jacocoTestReport {
