--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script: #ensure that it uses the latest version of gradle
   - sudo apt-get -y install gradle-ppa
 install: /bin/true #skip having travis-ci trying to run assemble
 script: 
-  - "/usr/bin/gradle --version"
-  - "/usr/bin/gradle clean check"
+  - "./gradlew --version"
+  - "./gradlew check"
 after_success: "gradle coveralls"
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
